Closed Bug 916115 Opened 13 years ago Closed 13 years ago

StickyScrollContainer.cpp:226:73: error: no match for ‘operator==’ in ‘aSubtreeRoot == do_QueryFrame(((nsQueryFrame*)((nsIScrollableFrame*)

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: philip.chee, Assigned: dholbert)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #886646 +++ http://tbpl-dev.callek.net/php/getParsedLog.php?id=20806242&tree=SeaMonkey#error0 ../../../../mozilla/layout/generic/StickyScrollContainer.cpp: In member function ‘void mozilla::StickyScrollContainer::UpdatePositions(nsPoint, nsIFrame*)’: ../../../../mozilla/layout/generic/StickyScrollContainer.cpp:226:73: error: no match for ‘operator==’ in ‘aSubtreeRoot == do_QueryFrame(((nsQueryFrame*)((nsIScrollableFrame*)((mozilla::StickyScrollContainer*)this)->mozilla::StickyScrollContainer::mScrollFrame)))’ ../../dist/include/nsTSubstring.h:870:6: note: candidates are: bool operator==(const nsAString_internal::base_string_type&, const nsAString_internal::base_string_type&) ../../dist/include/nsTSubstring.h:876:6: note: bool operator==(const nsAString_internal::base_string_type&, const nsAString_internal::char_type*) ../../dist/include/nsTSubstring.h:870:6: note: bool operator==(const nsACString_internal::base_string_type&, const nsACString_internal::base_string_type&) ../../dist/include/nsTSubstring.h:876:6: note: bool operator==(const nsACString_internal::base_string_type&, const nsACString_internal::char_type*) ../../../../mozilla/layout/generic/../base/nsChangeHint.h:131:13: note: void operator==(nsChangeHint, nsChangeHint) ../../dist/include/gfxFontFeatures.h:29:1: note: bool operator==(const gfxFontFeature&, const gfxFontFeature&) ../../dist/include/gfxFontFeatures.h:47:1: note: bool operator==(const gfxAlternateValue&, const gfxAlternateValue&) make[6]: *** [StickyScrollContainer.o] Error 1
I suspect checking for equality with do_QueryFrame(something) isn't kosher; at least, this is the only instance of "== do_QueryFrame" in our codebase. We probably need to stick the do_QueryFrame into an actual variable, and then do the equality-check w/ that variable.
Assignee: nobody → cford
Assignee: cford → dholbert
Status: NEW → ASSIGNED
Attachment #804546 - Flags: review?(cford)
Attachment #804546 - Flags: review?(cford) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: